<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HouseDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/house_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/house_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:id="@+id/house_detail_btn_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/icon_back" />

                <TextView
                    android:id="@+id/house_detail_con_titles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/house_list_title"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textColor="#000000"
                    android:ellipsize="end"
                    android:fontFamily="@font/applesdgothicneob"
                    android:maxLines="1"/>

                <ImageView
                    android:id="@+id/house_detail_search"
                    android:layout_gravity="center|right"
                    android:visibility="invisible"
                    android:layout_width="20.0dip"
                    android:layout_height="20.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="20.0dip"
                    app:srcCompat="@drawable/icon_search" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/house_detail_explanation"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/house_detail_appbar"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/house_detail_explanation"
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:fontFamily="@font/applesdgothicneol"/>

    <TextView
        android:id="@+id/house_detail_table_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/house_detail_explanation"
        android:layout_marginTop="100dp"
        android:text="@string/house_detail_table_title"
        android:textColor="@color/text_dark_gray"
        android:textSize="19dp"
        android:fontFamily="@font/applesdgothicneol"/>

    <TableLayout
        android:id="@+id/house_detail_table"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/house_detail_table_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:stretchColumns="2"
        android:background="@color/dark_gray">

        <TableRow
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginTop="0.5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="53dp"
                android:layout_margin="0.5dp"
                android:background="@color/white"
                android:fontFamily="@font/applesdgothicneol"
                android:gravity="center_horizontal"
                android:paddingLeft="7dp"
                android:paddingTop="2dp"
                android:paddingRight="7dp"
                android:paddingBottom="2dp"
                android:text="@string/house_detail_address"
                android:textAlignment="center"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/house_detail_address"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:text="서울특별시 서대문구 모래내로 430"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp"
                android:fontFamily="@font/applesdgothicneol"
                android:background="@color/white"
                android:layout_margin="0.5dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"/>
        </TableRow>

        <TableRow
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp">

            <TextView
                android:layout_width="80dp"
                android:text="@string/house_detail_area"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp"
                android:textAlignment="center"
                android:fontFamily="@font/applesdgothicneol"
                android:gravity="center_horizontal"
                android:background="@color/white"
                android:layout_margin="0.5dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"/>

            <TextView
                android:id="@+id/house_detail_area"
                android:layout_height="match_parent"
                android:text="430m2"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp"
                android:fontFamily="@font/applesdgothicneol"
                android:background="@color/white"
                android:layout_margin="0.5dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"/>
        </TableRow>

        <TableRow
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginBottom="0.5dp">

            <TextView
                android:layout_width="80dp"
                android:text="@string/house_detail_proprietary"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp"
                android:textAlignment="center"
                android:fontFamily="@font/applesdgothicneol"
                android:gravity="center_horizontal"
                android:background="@color/white"
                android:layout_margin="0.5dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"/>

            <TextView
                android:id="@+id/house_detail_proprietary"
                android:text="성진아 (980324-******)"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp"
                android:fontFamily="@font/applesdgothicneol"
                android:background="@color/white"
                android:layout_margin="0.5dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/house_detail_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="65dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/house_detail_btn_allow"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/house_detail_allow"
            android:textColor="@color/text_white"
            android:textSize="18sp"
            android:background="@drawable/blue_round_rectangular" />

        <TextView
            android:id="@+id/house_detail_btn_disallow"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="@string/house_detail_disallow"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:background="@drawable/gray_round_rectangular"/>

    </LinearLayout>

</RelativeLayout>